<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_manage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_base"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            app:layout_collapseMode="pin"
            app:logo="@drawable/ic_toolbar_img"
            app:popupTheme="@style/MyOptionMenuStyle"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="5.0dip"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="17.0sp" />

            <TextView
                android:id="@+id/tv_toolbar_app_manager"
                android:layout_width="wrap_content"
                android:layout_height="?android:actionBarSize"
                android:layout_gravity="right"
                android:layout_marginRight="10.0dip"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="5.0dip"
                android:text="@string/label_app_manager"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_normal_size"
                android:visibility="gone" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:divider="@drawable/shape_list_divider_match"
            android:orientation="vertical"
            android:showDividers="middle">

            <RelativeLayout
                android:id="@+id/rl_manage_uninstall"
                style="@style/SettingCommonItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:text="@string/manage_uninstall_title"
                    android:textAppearance="?android:textAppearanceListItem"
                    android:textColor="@color/normal_text_color"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@android:id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@android:id/title"
                    android:text="@string/manage_uninstall_summary"
                    android:textColor="@color/second_text_color"
                    android:textSize="14.0sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_manage_feedback"
                style="@style/SettingCommonItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:text="@string/manage_upload_title"
                    android:textColor="@color/normal_text_color"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@android:id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@android:id/title"
                    android:text="@string/manage_upload_summary"
                    android:textColor="@color/second_text_color"
                    android:textSize="14.0sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_manage_share"
                style="@style/SettingCommonItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:text="@string/manage_share_title"
                    android:textColor="@color/normal_text_color"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@android:id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@android:id/title"
                    android:text="@string/manage_share_summary"
                    android:textColor="@color/second_text_color"
                    android:textSize="14.0sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_manage_setting"
                style="@style/SettingCommonItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:text="@string/manage_setting_title"
                    android:textColor="@color/normal_text_color"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@android:id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@android:id/title"
                    android:text="@string/manage_setting_summary"
                    android:textColor="@color/second_text_color"
                    android:textSize="14.0sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_manage_update"
                style="@style/SettingCommonItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:text="@string/manage_update_title"
                    android:textColor="@color/normal_text_color"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@android:id/title"
                    android:text="@string/manage_update_summary"
                    android:textColor="@color/second_text_color"
                    android:textSize="14.0sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_manage_about"
                style="@style/SettingCommonItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_padding">

                <TextView
                    android:id="@android:id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:maxLines="1"
                    android:text="@string/manage_about_title"
                    android:textColor="@color/normal_text_color"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@android:id/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@android:id/title"
                    android:text="@string/manage_about_summary"
                    android:textColor="@color/second_text_color"
                    android:textSize="14.0sp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>