<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            app:popupTheme="@style/MyOptionMenuStyle"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/tv_about_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/about_app"
                android:textColor="@color/white"
                android:textSize="17.0sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_about_icon"
                android:layout_width="150.0dip"
                android:layout_height="150.0dip"
                android:layout_gravity="center"
                android:layout_marginTop="20.0dip"
                android:src="@drawable/img_about" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="6.0dip"
                android:padding="8.0dip"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_about_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_version"
                android:textColor="@color/second_text_color"
                android:textSize="14.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="16.0dip"
                android:layout_marginTop="10.0dip"
                android:layout_marginRight="16.0dip"
                android:orientation="vertical"
                android:paddingLeft="10.0dip"
                android:paddingTop="5.0dip"
                android:paddingRight="10.0dip"
                android:paddingBottom="5.0dip">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.3"
                    android:padding="8.0dip"
                    android:text="@string/app_description"
                    android:textColor="@color/normal_text_color"
                    android:textSize="14.0sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8.0dip"
                    android:text="@string/label_about_qq"
                    android:textColor="@color/normal_text_color"
                    android:textIsSelectable="true"
                    android:textSize="16.0sp" />

                <TextView
                    android:id="@+id/tv_url"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8.0dip"
                    android:text="@string/label_about_offical_website"
                    android:textColor="@color/normal_text_color"
                    android:textIsSelectable="true"
                    android:textSize="16.0sp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>