<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:divider="@drawable/shape_list_divider"
    android:orientation="vertical"
    android:showDividers="end|middle">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_setting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            app:layout_scrollFlags="enterAlways|scroll|snap"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
            app:popupTheme="@style/MyOptionMenuStyle"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/tv_setting_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="17.0sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@drawable/shape_list_divider"
        android:orientation="vertical"
        android:showDividers="end|middle">

        <RelativeLayout
            android:id="@+id/rl_setting_net"
            style="@style/SettingCommonItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@android:id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:maxLines="1"
                android:text="@string/setting_net_title"
                android:textColor="@color/normal_text_color"
                android:textSize="16.0sp" />

            <TextView
                android:id="@android:id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/title"
                android:text="@string/setting_net_summary"
                android:textColor="@color/second_text_color"
                android:textSize="14.0sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_setting_net"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_setting_root"
            style="@style/SettingCommonItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@android:id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:maxLines="1"
                android:text="@string/setting_root_title"
                android:textColor="@color/normal_text_color"
                android:textSize="16.0sp" />

            <TextView
                android:id="@android:id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/title"
                android:text="@string/setting_root_summary"
                android:textColor="@color/second_text_color"
                android:textSize="14.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_setting_system_enable"
            style="@style/SettingCommonItem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@android:id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:fadingEdge="horizontal"
                android:maxLines="1"
                android:text="@string/setting_system_title"
                android:textColor="@color/normal_text_color"
                android:textSize="16.0sp" />

            <TextView
                android:id="@android:id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@android:id/title"
                android:text="@string/setting_system_summary"
                android:textColor="@color/second_text_color"
                android:textSize="14.0sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>